app health check test

--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,11 @@ allprojects {
 	dependencies {
 		//Production dependencies
 		implementation 'org.springframework.boot:spring-boot-starter'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
 
 		//Test dependencies
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'junit:junit:4.13.1'
 	}
 
 	test {
