--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-rootProject.name = 'ninjarrm'
+rootProject.name = 'ninjarmm'
 
-include ':rrm'
-project(':rrm').projectDir = new File('src/rrm')
+include ':rmm'
+project(':rmm').projectDir = new File('src/rmm')
 
 include ':shared'
 project(':shared').projectDir = new File('src/shared')
