--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         implementation 'mysql:mysql-connector-java:8.0.32'
         implementation 'javax.xml.bind:jaxb-api:2.3.1'
         implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
+        implementation 'org.reflections:reflections:0.10.2'
 
 
         //Test dependencies
