--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -1,7 +1,12 @@
+////RMM BACKEND APPLICATION///
+
 # MySql
-DATABASE_PORT=3360
-DATABASE_HOST=localhost
-DATABASE_NAME=rrm
-DATABASE_USER=root
-DATABASE_PASSWORD=root
-SERVER_PORT=8082
+RMM_DATABASE_PORT=3360
+RMM_DATABASE_HOST=localhost
+RMM_DATABASE_NAME=rrm
+RMM_DATABASE_USER=root
+RMM_DATABASE_PASSWORD=root
+RMM_SERVER_PORT=8082
+
+////RMMCUSTOMERS BACKEND APPLICATION///
+RMMCUSTOMERS_SERVER_PORT=8083
