--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         implementation 'javax.xml.bind:jaxb-api:2.3.1'
         implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
         implementation 'org.reflections:reflections:0.10.2'
+        implementation 'com.google.guava:guava:31.1-jre'
 
 
         //Test dependencies
