--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -9,4 +9,9 @@ RMM_DATABASE_PASSWORD=root
 RMM_SERVER_PORT=8082
 
 ////RMMCUSTOMERS BACKEND APPLICATION///
+RMMCUSTOMERS_DATABASE_PORT=3360
+RMMCUSTOMERS_DATABASE_HOST=localhost
+RMMCUSTOMERS_DATABASE_NAME=rrmcustomers
+RMMCUSTOMERS_DATABASE_USER=root
+RMMCUSTOMERS_DATABASE_PASSWORD=root
 RMMCUSTOMERS_SERVER_PORT=8083
