--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ allprojects {
         implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
         implementation 'org.reflections:reflections:0.10.2'
         implementation 'com.google.guava:guava:31.1-jre'
+        implementation 'me.paulschwarz:spring-dotenv:3.0.0'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 
         //Test dependencies
