--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ allprojects {
         implementation 'me.paulschwarz:spring-dotenv:3.0.0'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+        compileOnly 'org.projectlombok:lombok:1.18.26'
+        annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+        testCompileOnly 'org.projectlombok:lombok:1.18.26'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+
 
         //Test dependencies
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
