Save customer device

--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -3,7 +3,7 @@
 # MySql
 RMM_DATABASE_PORT=3360
 RMM_DATABASE_HOST=localhost
-RMM_DATABASE_NAME=rrm
+RMM_DATABASE_NAME=rmm
 RMM_DATABASE_USER=root
 RMM_DATABASE_PASSWORD=root
 RMM_SERVER_PORT=8082
@@ -11,7 +11,7 @@ RMM_SERVER_PORT=8082
 ////RMMCUSTOMERS BACKEND APPLICATION///
 RMMCUSTOMERS_DATABASE_PORT=3360
 RMMCUSTOMERS_DATABASE_HOST=localhost
-RMMCUSTOMERS_DATABASE_NAME=rrmcustomers
+RMMCUSTOMERS_DATABASE_NAME=rmmcustomers
 RMMCUSTOMERS_DATABASE_USER=root
 RMMCUSTOMERS_DATABASE_PASSWORD=root
 RMMCUSTOMERS_SERVER_PORT=8083
